# DataCrank

./: README.md  Race_calendar.py  main.py  plot_power_curves.py  power_curve.py  pyproject.toml  read_rider_data.py  rider_db.json
Tadej/: 2016_02_07_13_51_43.csv  2016_02_15_15_53_47.csv  2016_02_20_12_32_36.csv  2016_02_24_13_45_31.csv  2016_02_26_15_11_01.csv  2016_03_05_13_52_04.csv  2016_03_17_16_04_31.csv  2016_03_26_14_06_09.csv  2016_03_31_15_38_33.csv  2016_03_31_15_46_11.csv  2016_04_02_13_44_19.csv  2016_04_05_13_34_34.csv  2016_04_14_13_26_41.csv  2016_04_19_13_11_45.csv  2016_04_21_16_34_49.csv  2016_04_22_15_54_12.csv  2016_04_24_07_55_25.csv  2016_05_07_22_29_54.csv  2016_05_09_15_41_36.csv  2016_05_11_15_39_25.csv  2016_05_14_13_05_38.csv  2016_05_27_17_00_10.csv  2016_05_28_13_25_54.csv  2016_06_11_13_13_29.csv  2016_06_14_18_38_28.csv  2016_06_22_18_24_44.csv  2016_06_28_18_40_15.csv  2016_07_02_06_46_28.csv  2016_07_03_14_30_34.csv  2016_07_07_12_53_49.csv  2016_07_12_15_13_58.csv  2016_07_20_07_37_14.csv  2016_07_22_07_17_13.csv  2016_07_30_06_31_53.csv  2016_09_28_14_15_37.csv  2016_09_30_12_50_55.csv  2016_10_30_12_00_50.csv  2016_11_20_08_31_45.csv  2016_11_21_19_14_19.csv  2016_11_22_18_34_06.csv  (+310 more)
Tadej_trainings/: 2016_02_12_16_03_26.csv  2016_02_20_12_50_10.csv  2016_03_11_15_11_35.csv  2016_03_13_13_41_38.csv  2016_03_18_15_43_01.csv  2016_03_22_15_50_31.csv  2016_03_27_15_11_55.csv  2016_04_04_14_44_14.csv  2016_04_08_15_01_36.csv  2016_04_11_14_35_34.csv  2016_04_17_14_05_25.csv  2016_05_02_16_09_08.csv  2016_05_05_15_47_49.csv  (+363 more)
(+290 files in other folders)
